dev/non_executable_reasons_record_from_random_10k/7719.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
from __future__ import unicode_literals, print_function, division
from io import open
import glob
import unicodedata
import string

all_letters = string.ascii_letters + " .,;'-"
n_letters = len(all_letters) + 1 # æ·»åŠ  EOS æ ‡è®°

def findFiles(path): return glob.glob(path)

# å°† Unicode å­—ç¬¦ä¸²è½¬æ¢ä¸ºçº¯ ASCII ç¼–ç , æ„Ÿè°¢ http://stackoverflow.com/a/518232/2809427
def unicodeToAscii(s):
    return ''.join(
        c for c in unicodedata.normalize('NFD', s)
        if unicodedata.category(c) != 'Mn'
        and c in all_letters
    )

# è¯»å–æ–‡ä»¶å¹¶åˆ†å‰²æˆè¡Œ
def readLines(filename):
    lines = open(filename, encoding='utf-8').read().strip().split('\n')
    return [unicodeToAscii(line) for line in lines]

# æ„å»ºæ˜ å°„å­—å…¸ category_lines , æ¯ä¸ªç±»åˆ«æ˜¯ç”±å¾ˆå¤šä¸ªè¡Œç»„æˆçš„list
category_lines = {}
all_categories = []
for filename in findFiles('data/names/*.txt'):
    category = filename.split('/')[-1].split('.')[0]
    all_categories.append(category)
    lines = readLines(filename)
    category_lines[category] = lines

n_categories = len(all_categories)

print('# categories:', n_categories, all_categories)
print(unicodeToAscii("O'NÃ©Ã l"))
------------------

[0;36m  File [0;32m"<ipython-input-1-6836c558b331>"[0;36m, line [0;32m6[0m
[0;31m    import unicodedata[0m
[0m           ^[0m
[0;31mSyntaxError[0m[0;31m:[0m from __future__ imports must occur at the beginning of the file

SyntaxError: from __future__ imports must occur at the beginning of the file (<ipython-input-1-6836c558b331>, line 6)

Executability                            : False
